# linux_audio_decoder_and_player

./: .gitignore  CMakeLists.txt  COPYING  LICENSE  main.cpp  readme.md
include/decoder/: decoder.h  ffmpeg_decoder.h  pcm_reader.h
include/player/: alsa_player.h  pcm_dumper.h  player.h
src/decoder/: decoder.cpp  ffmpeg_decoder.cpp  pcm_reader.cpp
src/player/: alsa_player.cpp  pcm_dumper.cpp  player.cpp
